language/move-lang/tests/move_check/typing/bad_type_argument_arity_struct_pack.move
address 0x42 {
module M {

    struct S<T> { f: T }

    fun ex() {
        S<> { f: 0 };
        S<u64, u64> { f: 0 };
    }
}

}
